# GraphemeToPhoneme-Greek

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  digits_to_words.py  g2p_greek.py  g2p_own_rules.py  noxfile.py  prefixes.py  pyproject.toml  rules.py  setup.py  sort.py  utils.py
data/: example_substitute_words.json  somewords.txt
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
g2p_greek/: __init__.py  __main__.py  dictionary.py  digits_to_words.py  english_rules.py  g2p_greek.py  phoneme_conversion.py  prefixes.py  rules.py  sort.py  utils.py
g2p_greek.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/g2p_greek/: __init__.py  __main__.py  digits_to_words.py  g2p_greek.py  utils.py
tests/: __init__.py  output.dic  sample_words.txt  test_main.py
