[tool.poetry]
name = "g2p-greek"
version = "0.1.0"
description = "The description of the package"

authors = [
    "Karakasidis Georgios <george.karakasides@gmail.com>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/python-poetry/poetry"
homepage = "https://github.com/python-poetry/poetry"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.5"  # Compatible python versions must be declared here
toml = "^0.9"
# Dependencies with extras
requests = { version = "^2.13", extras = [ "security" ] }
# Python specific dependencies with prereleases allowed
#pathlib2 = { version = "^2.2", python = "~2.7", allow-prereleases = true }
# Git dependencies
#cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }

# Optional dependencies (extras)
#pendulum = { version = "^1.4", optional = true }

#[tool.poetry.dev-dependencies]
#pytest = "^3.0"
#pytest-cov = "^2.4"

[tool.poetry.scripts]
my-script = 'my_package:main'